# MemryX_eXamples

./: .gitattributes  .gitignore  README.md
accuracy_calculation/classification_resnet50/: README.md
accuracy_calculation/classification_resnet50/src/python/: preprocess.py  run_validation.py
accuracy_calculation/detect_yolov8/: README.md
accuracy_calculation/detect_yolov8/src/: run_validation.py
accuracy_calculation/keras_accuracy/: LICENSE.md  README.md
accuracy_calculation/keras_accuracy/src/python/: get_imagenet_valdata.sh  keras_accuracy.py
fun_projects/MxFit/: README.md  freeze
fun_projects/MxFit/src/: main.py  pose.py
fun_projects/MxFit/src/templates/: bicepcurl.html  common.html  frontraise.html  home.html  shoulderpress.html  squats.html
fun_projects/MxFit/src/tracker/: byte_tracker.py
fun_projects/aimbot/: README.md
fun_projects/aimbot/src/: aimbot_mxa.py  requirements.txt  run_mxa.bat
fun_projects/aimbot/src/lib/: mxa.cp311-win_amd64.pyd  yolov7.py
fun_projects/cartoonizer/: README.md
fun_projects/cartoonizer/src/python/: run_facial_cartoonizer.py
fun_projects/cartoonizer/src/python_windows/: requirements.txt  run.bat  run_facial_cartoonizer.py
fun_projects/chrome_dino_game/: README.md
fun_projects/chrome_dino_game/src/python/: mp_palmdet.py  run_dino_game.py
fun_projects/mario_rl/: README.md
fun_projects/mario_rl/src/: agent.py  env.py  logger.py  models.py  play.py  train.py  utils.py
fun_projects/tinystories/: README.md
fun_projects/tinystories/src/: export_to_onnx.py  run_tinystories.py
fun_projects/virtual_painter/: LICENSE.md  README.md
fun_projects/virtual_painter/assets/: settings.json
fun_projects/virtual_painter/src/python/: MxHandPose.py  mp_handpose.py  mp_palmdet.py  virtual_painter.py
guidelines/: CONTRIBUTING.md  LICENSE_GPLv3.md  file_structure.md  readme_template.md
image_inference/face_recognition/: .gitignore  README.md
image_inference/face_recognition/src/: MXFace.py  run.py
image_inference/oriented_bounding_boxes/: README.md
image_inference/oriented_bounding_boxes/models/: export_model.py
image_inference/oriented_bounding_boxes/src/: MXObb.py  run.py
multistream_video_inference/multistream_objectdetection_yolov7Tiny/: README.md
multistream_video_inference/multistream_objectdetection_yolov7Tiny/src/c++/: CMakeLists.txt  objectDetection.cpp
multistream_video_inference/multistream_objectdetection_yolov7Tiny/src/python/: run_yolov7_multistream_objectdetection.py  yolov7.py
multistream_video_inference/object_detection_yolov8/: README.md
multistream_video_inference/object_detection_yolov8/src/cpp/: CMakeLists.txt  yolov8_objectDetection.cpp
multistream_video_inference/object_detection_yolov8/src/python/: run_objectiondetection.py  yolov8.py
video_inference/centernet/: README.md
video_inference/centernet/src/cpp/: CMakeLists.txt  CenterNet.cpp
video_inference/depth_midas/: README.md
video_inference/depth_midas/src/cpp/: CMakeLists.txt  depthEstimation.cpp
video_inference/depth_midas/src/python/: run_depth_estimate.py
video_inference/face_emotion_detection/: README.md
video_inference/face_emotion_detection/src/cpp/: CMakeLists.txt  model.cpp  model.h  multimodel.cpp
video_inference/face_emotion_detection/src/python/: run_face_emotion.py
video_inference/face_emotion_detection/src/python/emotion_recognition/: app.py
video_inference/face_emotion_detection/src/python/face_detection/: app.py  model.py
video_inference/intrusion_detection/: README.md
video_inference/intrusion_detection/src/python/: intrusion_demo.py
video_inference/object_detection_yolox/: README.md
video_inference/object_detection_yolox/src/python/: run_object_detection_yolox.py  yolox.py
video_inference/pointcloud_from_depth/: README.md
video_inference/pointcloud_from_depth/src/python/: run_pointcloud_from_depth.py
video_inference/pointcloud_from_depth/src/python_windows/: requirements.txt  run.bat  run_pointcloud_from_depth.py  setup_env.bat
video_inference/pose_estimation_yolov8/: README.md
video_inference/pose_estimation_yolov8/src/cpp/: CMakeLists.txt  poseEstimation.cpp
video_inference/pose_estimation_yolov8/src/python/: run_pose_estimation.py
video_inference/realtime_multiface_recognition/: README.md
video_inference/realtime_multiface_recognition/src/: viewer.py
video_inference/segmentation_yolov8/: README.md
video_inference/segmentation_yolov8/src/python/: run_segmentation.py
video_inference/singlestream_ALPR/: README.md
video_inference/singlestream_ALPR/src/cpp/: CMakeLists.txt  singlestream_ALPR.cpp
video_inference/singlestream_objectdetection_yolov7Tiny/: README.md
video_inference/singlestream_objectdetection_yolov7Tiny/src/python/: run_yolov7_singlestream_objectdetection.py  yolov7.py
video_inference/singlestream_peopletracking_yolov7Tiny/: README.md
video_inference/singlestream_peopletracking_yolov7Tiny/src/python/: run_yolov7tiny_singlestream_peopletracking.py  yolov7.py
video_inference/vehicle_detection/: README.md
video_inference/vehicle_detection/assets/: 0.npy
video_inference/vehicle_detection/src/python/: run_vehicle_detection.py
video_inference/wireframe/: README.md
video_inference/wireframe/src/: run_wireframe.py
(+4 files in other folders)
